--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 examples/basiccube/debug
+examples/basiccube/basiccube
 examples/basiccube/basiccube.exe
 examples/basiccube/openvr_api.dll
 examples/connectiontest/debug
+examples/connectiontest/connectiontest
 examples/connectiontest/connectiontest.exe
 examples/connectiontest/openvr_api.dll
 *.exe
