refactored code from the basiccube example into util/fizzlevr where possible

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ examples/connectiontest/connectiontest
 examples/connectiontest/connectiontest.exe
 examples/connectiontest/openvr_api.dll
 *.exe
+*.swp
